// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FreeTextResponse > renders default as expected 1`] = `
<div>
  <form
    class="free-text-response container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="free-text-response__header flex flex-col gap-4"
    >
      <span
        class="tag inline-flex items-center px-4 py-2 text-xs font-semibold w-fit !text-bluedot-normal bg-[#E5EDFE] rounded-sm uppercase"
        role="status"
      >
        Think it through
      </span>
      <div
        class="free-text-response__header-content flex flex-col gap-2"
      >
        <p
          class="free-text-response__title bluedot-h4 not-prose"
        >
          Understanding LLMs
        </p>
        <div
          class="markdown-extended-renderer prose prose-p:text-size-md prose-li:text-size-md prose-p:leading-normal prose-li:leading-normal max-w-none"
        >
          <p>
            Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
          </p>
        </div>
      </div>
    </div>
    <div
      class="free-text-response__options flex flex-col gap-2"
    >
      <textarea
        class="free-text-response__textarea p-4 container-lined"
        disabled=""
        name="answer"
        placeholder="Create an account to save your answers"
      />
    </div>
    <a
      class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose text-sm px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark free-text-response__login-cta"
      href="http://localhost:3000/login?register=true&redirect_to=%2Ftest-path"
      tabindex="0"
    >
      <span
        class="cta-button__text"
      >
        Create a free account to save your answers
      </span>
      <span
        class="cta-button__chevron ml-3"
      >
        <svg
          class="cta-button__chevron-icon size-2"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          />
        </svg>
      </span>
    </a>
  </form>
</div>
`;

exports[`FreeTextResponse > renders logged in as expected 1`] = `
<div>
  <form
    class="free-text-response container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="free-text-response__header flex flex-col gap-4"
    >
      <span
        class="tag inline-flex items-center px-4 py-2 text-xs font-semibold w-fit !text-bluedot-normal bg-[#E5EDFE] rounded-sm uppercase"
        role="status"
      >
        Think it through
      </span>
      <div
        class="free-text-response__header-content flex flex-col gap-2"
      >
        <p
          class="free-text-response__title bluedot-h4 not-prose"
        >
          Understanding LLMs
        </p>
        <div
          class="markdown-extended-renderer prose prose-p:text-size-md prose-li:text-size-md prose-p:leading-normal prose-li:leading-normal max-w-none"
        >
          <p>
            Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
          </p>
        </div>
      </div>
    </div>
    <div
      class="free-text-response__options flex flex-col gap-2"
    >
      <textarea
        class="free-text-response__textarea p-4 container-lined"
        name="answer"
        placeholder="Enter your answer here"
      />
    </div>
    <button
      class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose text-sm px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark free-text-response__submit"
      type="button"
    >
      <span
        class="cta-button__text"
      >
        Save
      </span>
    </button>
  </form>
</div>
`;

exports[`FreeTextResponse > renders with saved exercise response 1`] = `
<div>
  <form
    class="free-text-response container-lined bg-white p-8 flex flex-col gap-6"
  >
    <div
      class="free-text-response__header flex flex-col gap-4"
    >
      <span
        class="tag inline-flex items-center px-4 py-2 text-xs font-semibold w-fit !text-bluedot-normal bg-[#E5EDFE] rounded-sm uppercase"
        role="status"
      >
        Think it through
      </span>
      <div
        class="free-text-response__header-content flex flex-col gap-2"
      >
        <p
          class="free-text-response__title bluedot-h4 not-prose"
        >
          Understanding LLMs
        </p>
        <div
          class="markdown-extended-renderer prose prose-p:text-size-md prose-li:text-size-md prose-p:leading-normal prose-li:leading-normal max-w-none"
        >
          <p>
            Why is a language model's ability to predict 'the next word' capable of producing complex behaviors like solving maths problems?
          </p>
        </div>
      </div>
    </div>
    <div
      class="free-text-response__options flex flex-col gap-2"
    >
      <textarea
        class="free-text-response__textarea p-4 free-text-response__textarea--saved container-active bg-[#63C96533] border-[#63C965] text-[#2A5D2A]"
        name="answer"
        placeholder="Enter your answer here"
      />
    </div>
    <button
      class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose text-sm px-4 py-3 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark free-text-response__submit"
      type="button"
    >
      <span
        class="cta-button__text"
      >
        Save
      </span>
    </button>
    <p
      class="bluedot-p not-prose free-text-response__saved-msg"
    >
      Saved! 🎉
    </p>
  </form>
</div>
`;
